--- a/src/app/spotfire-wrapper/spotfire-wrapper.component.scss
+++ b/src/app/spotfire-wrapper/spotfire-wrapper.component.scss
@@ -53,7 +53,8 @@ display:flex; flex-flow:column;
   display:flex; flex-flow:row wrap;
   > * {
     margin-top:10px;
-    flex: 0 0 (100%/2)
+    flex: 0 0 48%;
+    margin-right: 2%;
   }
   > button {
     margin-top:10px;
