--- a/projects/spotfire-webplayer/src/lib/editor/spotfire-editor.component.html
+++ b/projects/spotfire-webplayer/src/lib/editor/spotfire-editor.component.html
@@ -69,7 +69,7 @@
     <div class="front">
       <div class="err" *ngIf="errorMessages.length > 0">{{errorMessages|json}}</div>
       <div class="err" *ngIf="possibleValues">{{possibleValues}}</div>
-      <div style='height:100%' #spot></div>
+      <div style='height:100%; border:2px dashed orange; border-radius:8px' #spot></div>
       <div class="editdiv"> {{url}}/{{path}}/{{page}}
         <span (click)='edit=!edit;stopPropagation($event)'>edit</span>
       </div>
