Add license in sourcce code, LICENCE and 3rdpartylicenses.txt files Bump version to 0.5.0

--- a/projects/spotfire-webplayer/src/lib/editor/spotfire-editor.component.html
+++ b/projects/spotfire-webplayer/src/lib/editor/spotfire-editor.component.html
@@ -1,3 +1,9 @@
+<!--
+  Copyright (c) 2019. TIBCO Software Inc.
+  This file is subject to the license terms contained
+  in the license file that is distributed with this file.
+-->
+
 <div class="flip-container" [class.flipit]="edit">
   <div class="flipper">
     <div *ngIf="form && metadata && dataTables" class="back" [formGroup]="form" (click)="stopPropagation($event)">
