--- a/projects/spotfire-webplayer/src/lib/editor/spotfire-editor.component.scss
+++ b/projects/spotfire-webplayer/src/lib/editor/spotfire-editor.component.scss
@@ -1,3 +1,9 @@
+/*
+* Copyright (c) 2019. TIBCO Software Inc.
+* This file is subject to the license terms contained
+* in the license file that is distributed with this file.
+*/
+
 /* entire container, keeps perspective */
 .flip-container {
   perspective: 1000px;
