--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
+/*
+* Copyright (c) 2019. TIBCO Software Inc.
+* This file is subject to the license terms contained
+* in the license file that is distributed with this file.
+*/
+
 /* You can add global styles to this file, and also import other style files */
