--- a/projects/spotfire-webplayer/src/lib/editor/my-theme.scss
+++ b/projects/spotfire-webplayer/src/lib/editor/my-theme.scss
@@ -1,3 +1,9 @@
+/*
+* Copyright (c) 2019. TIBCO Software Inc.
+* This file is subject to the license terms contained
+* in the license file that is distributed with this file.
+*/
+
 @import '~@angular/material/theming';
 // Plus imports for other components in your app.
 
