Add licence header in files Bump version to 0.6.0

--- a/projects/spotfire-webplayer/src/lib/viewer/spotfire-viewer.component.html
+++ b/projects/spotfire-webplayer/src/lib/viewer/spotfire-viewer.component.html
@@ -1,1 +1,6 @@
+<!--
+  Copyright (c) 2019. TIBCO Software Inc.
+  This file is subject to the license terms contained
+  in the license file that is distributed with this file.
+-->
 <div style='height:100%; border:2px dashed green; border-radius:8px' #spot></div>
