Minor fix to js lib - update build script

--- a/projects/spotfire-wrapper/src/lib/viewer/spotfire-viewer.component.html
+++ b/projects/spotfire-wrapper/src/lib/viewer/spotfire-viewer.component.html
@@ -3,4 +3,4 @@
   This file is subject to the license terms contained
   in the license file that is distributed with this file.
 -->
-<div style='height:100%; border:2px dashed green; border-radius:8px' #spot></div>
+<div style='height:100%' #spot></div>
